@@ -1,3 +1,4 @@
+12/26/11 add precipitate on bottom of beaker
 12/26/11 add "Saturated!" indicator
 12/26/11 add solvent and "fluid" to model, make faucet outputs show fluid
 12/26/11 add fluid coming out of faucets
